# Taurus

./: CMakeLists.txt  COPYRIGHT  README.md
cmake/: arm-linux-gnueabihf.cmake
inc/: buildflags.h  config.h
inc/freerdp/: addin.h  altsec.h  api.h  assistance.h  build-config.h  build-config.h.in  client.h  codecs.h  constants.h  display.h  dvc.h  error.h  event.h  extension.h  freerdp.h  graphics.h  input.h  license.h  listener.h  log.h  message.h  metrics.h  peer.h  pointer.h  primary.h  primitives.h  rail.h  scancode.h  secondary.h  session.h  settings.h  svc.h  types.h  update.h  version.h  version.h.in  window.h
inc/freerdp/cache/: bitmap.h  brush.h  cache.h  glyph.h  nine_grid.h  offscreen.h  palette.h  pointer.h
inc/freerdp/channels/: audin.h  channels.h  cliprdr.h  disp.h  encomsp.h  geometry.h  log.h  rail.h  rdpdr.h  rdpei.h  rdpgfx.h  rdpsnd.h  remdesk.h  tsmf.h  urbdrc.h  video.h  wtsvc.h
inc/freerdp/client/: audin.h  (+17 more)
inc/winpr/: .gitignore  asn1.h  bcrypt.h  bitstream.h  clipboard.h  cmdline.h  collections.h  comm.h  credentials.h  credui.h  crt.h  crypto.h  debug.h  dsparse.h  endian.h  environment.h  error.h  file.h  handle.h  heap.h  image.h  ini.h  input.h  interlocked.h  intrin.h  io.h  library.h  locale.h  memory.h  midl.h  ndr.h  nt.h  ntlm.h  pack.h  path.h  pipe.h  platform.h  pool.h  print.h  registry.h  (+27 more)
src/: CMakeLists.txt
src/codec/: CMakeLists.txt  color.c  region.c  rfx.c  rfx_bitstream.h  rfx_constants.h  rfx_decode.c  rfx_decode.h  rfx_differential.h  rfx_dwt.c  rfx_dwt.h  rfx_encode.c  rfx_encode.h  rfx_neon.c  rfx_neon.h  rfx_quantization.c  rfx_quantization.h  rfx_rlgr.c  rfx_rlgr.h  rfx_sse2.c  rfx_sse2.h  rfx_types.h
src/codec/primitives/: prim_YCoCg.c  prim_YCoCg_opt.c  prim_YUV.c  prim_add.c  prim_add_opt.c  prim_alphaComp.c  prim_alphaComp_opt.c  prim_andor.c  prim_andor_opt.c  prim_colors.c  prim_colors_opt.c  prim_copy.c  prim_internal.h  prim_set.c  prim_set_opt.c  prim_shift.c  prim_shift_opt.c  prim_sign.c  prim_sign_opt.c  prim_templates.h  primitives.c  primitives.cl
src/winpr/: CMakeLists.txt
(+452 files in other folders)
