SET (TARGET_NAME "rfxcodec")
SET (PROJECT_INC ${CMAKE_SOURCE_DIR}/inc)
INCLUDE_DIRECTORIES (${PROJECT_INC})
AUX_SOURCE_DIRECTORY (. SRC_FILES)
AUX_SOURCE_DIRECTORY (primitives PRI_FILES)
#SET (PRIMITIVES_SRC primitives/primitives.c)
SET (LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/output)
SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
ADD_LIBRARY(rfxcodec SHARED ${SRC_FILES} ${PRI_FILES})

